fix(GlPopover): properly align close button
This ensures the close button is properly aligned when popovers have
long titles.

--- a/src/components/base/popover/popover.scss
+++ b/src/components/base/popover/popover.scss
@@ -67,6 +67,10 @@ $gl-popover-max-width: $grid-size * 35;
     @include gl-bg-white;
     @include gl-border-bottom-0;
     @include gl-pb-0;
+    @include gl-overflow-anywhere;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
   }
 
   .popover-body {
